@@ -10,6 +10,10 @@ Changes in existing functions:
 
 
 Bug fixes:
+  - seqtreedisplay() and disstreedisplay(): GraphViz installator no longer add 
+    GraphViz to the PATH environment variable. These functions now try hard to 
+	find GraphViz. If GraphViz is not found, GraphViz installation directory can
+	be specified by using the new 'gvpath' argument.
   - disstree() and seqtree(): removed the warning when R equals 0 or 1
     (no permutations).
   - seqformat(): fixed a problem with missing states when converting
